<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/first_number"
        android:inputType="numberDecimal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/second_number"
        android:inputType="numberDecimal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp">

        <Button
            android:id="@+id/addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtraction"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplication"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp">

        <Button
            android:id="@+id/division"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/modulus"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/modulus"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:hint="@string/result"
        android:inputType="numberDecimal"
        android:gravity="center_horizontal |center_vertical"/>

</RelativeLayout>